MTM-20434 remove gc logs from microservice logs